# sudoku_solver

./: CMakeLists.txt  LICENSE  README.md
cmake/: FetchCatch2.cmake  FetchExpected.cmake  FetchFmt.cmake
src/: CMakeLists.txt  data.cpp  data.hpp  input.cpp  input.hpp  main.cpp  solver.cpp  solver.hpp  toroidal_list.cpp  toroidal_list.hpp  utility.hpp
test/: CMakeLists.txt  data_test.cpp  solver_test.cpp
